--- a/Projects.html
+++ b/Projects.html
@@ -32,15 +32,15 @@
   <h2 class="special-heading">Projects</h2>
   <div class="pro-content">
       <div class="card ">
-        <img src="Images/Portfolio.jfif" alt="" />
+        <img src="/images/Portfolio.jfif" alt="" />
         <div class="info">
           <h5 class="card-title">My-Portfolio</h5>
           <p class="card-text">Built with HTML, CSS, JavaScript, and React.</p>
-          <a href="https://esraa4444255.github.io/Portfolio/" class="btn btn-outline-dark">View Project</a>
+          <a href="https://esraa4444255.github.io/Esraa-Portfolio/" class="btn btn-outline-dark">View Project</a>
         </div>
         </div>
       <div class="card">
-        <img src="Images/YAYA.jpg" alt="" />
+        <img src="/Images/YAYA.jpg" alt="" />
         <div class="info">
           <h5 class="card-title">YAYA-Website</h5>
           <p class="card-text"> handmade beaded bags brand, created with love</p>
@@ -48,7 +48,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="Images/landing.jpg"  alt="" />
+        <img src="/Images/landing.jpg"  alt="" />
         <div class="info">
           <h5 class="card-title">Leon</h5>
           <p class="card-text"> Landing-Page | Minimal Agency Web Template</p>
