--- a/Projects.html
+++ b/Projects.html
@@ -32,7 +32,7 @@
   <h2 class="special-heading">Projects</h2>
   <div class="pro-content">
       <div class="card ">
-        <img src="/images/Portfolio.jfif" alt="" />
+        <img src="images/Portfolio.jfif" alt="" />
         <div class="info">
           <h5 class="card-title">My-Portfolio</h5>
           <p class="card-text">Built with HTML, CSS, JavaScript, and React.</p>
@@ -40,15 +40,15 @@
         </div>
         </div>
       <div class="card">
-        <img src="/Images/YAYA.jpg" alt="" />
+        <img src="Images/YAYA.jpg" alt="" />
         <div class="info">
           <h5 class="card-title">YAYA-Website</h5>
           <p class="card-text"> handmade beaded bags brand, created with love</p>
-          <a href="https://esraa4444255.github.io/YAYA/" class="btn btn-outline-dark">View Project</a>
+          <a href="https://esraa4444255.github.io/YAYA-Shop/" class="btn btn-outline-dark">View Project</a>
         </div>
       </div>
       <div class="card">
-        <img src="/Images/landing.jpg"  alt="" />
+        <img src="Images/landing.jpg"  alt="" />
         <div class="info">
           <h5 class="card-title">Leon</h5>
           <p class="card-text"> Landing-Page | Minimal Agency Web Template</p>
@@ -58,7 +58,7 @@
     </div>
 </section>
 
-<footer class="text-center bg-dark text-white py-3">
+<footer >
   <p>© 2025 Esraa | Front-End Developer</p>
   <div>
     <a href="///https://github.com/Esraa4444255"><i class="fab fa-github"></i> GitHub</a> | 
