--- a/contact.html
+++ b/contact.html
@@ -28,9 +28,9 @@
   </div>
 </nav>
 
-<section class="container py-5 text-center">
-  <h2>Contact Me</h2>
-  <p class="lead mt-3">I’d love to hear from you! Whether it’s a project, collaboration, or just a hello, feel free to get in touch.</p>
+<section class="container">
+  <h2 class="special-heading"> Contact Me</h2>
+  <p class="text">I’d love to hear from you! Whether it’s a project, collaboration, or just a hello, feel free to get in touch.</p>
 <div class="contact-links">
     <a href="mailto:esraak22@icloud.com" class="btn-social email">
       <i class="fa-solid fa-envelope"></i>
@@ -42,7 +42,7 @@
 </section>
 
 
-<footer class="text-center bg-dark text-white py-3">
+<footer>
   <p>© 2025 Esraa | Front-End Developer</p>
   <div>
     <a href="///https://github.com/Esraa4444255"><i class="fab fa-github"></i> GitHub</a> | 
