--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 <section  class="container">
   <h2 class="special-heading">Projects</h2>
       <div class="card ">
-        <img src="Images/YAYA.jpg"  alt="" />
+        <img src="images/YAYA.jpg"  alt="" />
           <h5 class="card-title">YAYA-Website</h5>
           <p class="card-text"> handmade beaded bags brand, created with love, style and passion</p>
-          <a href="https://esraa4444255.github.io/YAYA/" class="btn btn-outline-dark">View Project</a>
+          <a href="https://esraa4444255.github.io/YAYA-Shop/" class="btn btn-outline-dark">View Project</a>
         </div>
 </section>
 
-<footer class="text-center bg-dark text-white py-3">
+<footer>
   <p>© 2025 Esraa | Front-End Developer</p>
   <div>
     <a href="///https://github.com/Esraa4444255"><i class="fab fa-github"></i> GitHub</a> | 
