--- a/skills.html
+++ b/skills.html
@@ -28,10 +28,10 @@
   </div>
 </nav>
 
-<section class="container py-5 text-center">
-  <h2>My Skills</h2>
-  <p class="lead mt-3">I specialize in Front-End Development with expertise in creating responsive, interactive, and modern web applications.</p>
-  <section id="skills" class="container py-5 text-center">
+<section class="container ">
+  <h2 class="special-heading">My Skills</h2>
+  <p class="text">I specialize in Front-End Development with expertise in creating responsive, interactive, and modern web applications.</p>
+  <section id="skills" class="container ">
   <div class="row mt-4">
     <div class="col-md-3"><i class="fab fa-html5 fa-3x"></i><p>HTML</p></div>
     <div class="col-md-3"><i class="fab fa-css3-alt fa-3x"></i><p>CSS</p></div>
@@ -41,7 +41,7 @@
 </section>
 </section>
 
-<footer class="text-center bg-dark text-white py-3">
+<footer >
   <p>© 2025 Esraa | Front-End Developer</p>
  <div>
     <a href="///https://github.com/Esraa4444255"><i class="fab fa-github"></i> GitHub</a> | 
