--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>About Me - Esraa</title>
+  <title> About Me - Esraa</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <link href="Css/about.css" rel="stylesheet">
@@ -29,7 +29,7 @@
 </nav>
 
 <section class="about">
-  <h2 class="special-heading"> About Me</h2>
+  <h2 class="special-heading"> About Me </h2>
 
   <p class="text">Hi! I'm Esraa, a dedicated Front-End Developer passionate about creating interactive and responsive web interfaces. 
     I love turning ideas into visually appealing experiences. My favorite tools are HTML, CSS, JavaScript, and React,
@@ -37,7 +37,7 @@
   </p>
 </section>
 
-<footer class="text-center bg-dark text-white py-3">
+<footer>
   <p>© 2025 Esraa | Front-End Developer</p>
   <div>
     <a href="///https://github.com/Esraa4444255"><i class="fab fa-github"></i> GitHub</a> | 
